@@ -1,3 +1,9 @@
+2002-10-30  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
+
+	* restore-src/amrestore.c: New '-l <label>' flag, Do a rewind and
+	  check the label before restoring.
+	* man/amrestore.8: Document -l flag.
+
 2002-10-29  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
 
 	* configure.in (AM_HAVE_MT_FLAGS, AM_HAVE_MT_FILENO, AM_HAVE_MT_BLKNO,
